# system_monitor

./: .gitignore  Cargo.toml  FLOW.md  README.md
src/: app.rs  main.rs
src/system/: cpu.rs  memory.rs  mod.rs  network.rs  processes.rs  thermal.rs
src/ui/: mod.rs
src/ui/widgets/: graphs.rs  mod.rs  tables.rs
src/ui/windows/: cpu.rs  memory.rs  mod.rs  network.rs  processes.rs  system.rs
src/utils/: formatting.rs  mod.rs
