[package]
name = "system-monitor"
version = "0.1.0"
edition = "2021"
authors = ["Fred Gitonga"]
description = "A system monitor built in Rust using Dear ImGui"

[dependencies]
imgui = { version = "0.11", features = ["tables-api"] }
imgui-sdl2 = "0.15"
sdl2 = "0.35"
procfs = "0.15"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = "0.4" 